<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.teilar.gr.earlywarningsystem.ui.MainActivity$PlaceholderFragment">

    <Button
        android:id="@+id/button_startFirewall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_firewall_button" />

    <Button
        android:id="@+id/button_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_charts" />

    <Button
        android:id="@+id/button_logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_logs" />

    <Button
        android:id="@+id/button_wizard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_wizard" />

</LinearLayout>